crates/ee-cli/src/tests/snapshots/ee__tests__render__ui_render_blanks_gutter_on_wrapped_continuation_rows.snap
---
source: crates/ee-cli/src/tests/render.rs
expression: grid
---
    1  wrapped-A
       wrapped-B
       wrapped-C
    2  next
~
~
~
~
