crates/ee-cli/src/tests/snapshots/ee__tests__render__ui_render_gdiff_shows_diff_scratch_buffer_for_relative_root_path.snap
---
source: crates/ee-cli/src/tests/render.rs
assertion_line: 146
expression: grid
---
    1  diff --git a/CHANGELOG.md b/CHANGELOG.md
    2  --- a/CHANGELOG.md
    3  +++ b/CHANGELOG.md
    4  @@ -1 +1 @@
    5  -## before
    6  +X## before
    7
~
