crates/ee-cli/src/tests/snapshots/ee__tests__render__ui_render_wrap_keeps_blank_line_aligned_with_cursor.snap
---
source: crates/ee-cli/src/tests/render.rs
expression: focus
---
       vulputate.
    2
    3  Ut ultrices auctor arcu id euismod. Sed leo nisl,
       feugiat vitae convallis vitae, venenatis in
